// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Stack>
    <Field
      component={[Function]}
      disabled={true}
      label="Username"
      name="username"
      validate={[Function]}
    />
    <Field
      autoComplete="new-password"
      autoFocus={true}
      component={[Function]}
      data-lpignore={true}
      disabled={false}
      helpText="Passwords must be at least 12 characters long."
      label="Password"
      name="password"
      type="password"
      validate={
        Array [
          [Function],
          [Function],
        ]
      }
    />
    <p>
      <small>
        By joining, you agree to SparkPost's
         
        <ExternalLink
          to="https://www.sparkpost.com/policies/tou"
        >
          Terms of Use
        </ExternalLink>
      </small>
    </p>
    <Box>
      <Button
        disabled={false}
        submit={true}
        variant="primary"
      >
        Confirm
      </Button>
    </Box>
  </Stack>
</form>
`;

exports[`submitting 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Stack>
    <Field
      component={[Function]}
      disabled={true}
      label="Username"
      name="username"
      validate={[Function]}
    />
    <Field
      autoComplete="new-password"
      autoFocus={true}
      component={[Function]}
      data-lpignore={true}
      disabled={true}
      helpText="Passwords must be at least 12 characters long."
      label="Password"
      name="password"
      type="password"
      validate={
        Array [
          [Function],
          [Function],
        ]
      }
    />
    <p>
      <small>
        By joining, you agree to SparkPost's
         
        <ExternalLink
          to="https://www.sparkpost.com/policies/tou"
        >
          Terms of Use
        </ExternalLink>
      </small>
    </p>
    <Box>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Loading
      </Button>
    </Box>
  </Stack>
</form>
`;
